<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">FPM2Droid</string>
    
    <string name="password_item_title">Title</string>
    <string name="password_item_url">URL / Arg</string>
    <string name="password_item_username">User Name</string>
    <string name="password_item_password">Password</string>
    <string name="password_item_category">Category</string>
    <string name="password_item_default">Default?</string>
    <string name="password_item_notes">Notes</string>
    <string name="password_item_launcher">Launcher</string>
    
    <string name="passphrase_dialog_passphrase">Passphrase:</string>
    <string name="passphrase_dialog_title">Unlock FPM2 Database</string>
    <string name="passphrase_dialog_ok">OK</string>
    <string name="passphrase_dialog_cancel">Cancel</string>
    
    <string name="checking_passphrase">Checking passphrase...</string>
    
    <string name="preferences">Settings</string>
    <string name="lock">Lock</string>
    <string name="about">About</string>
    
    <string name="view">View</string>
    <string name="launch">Launch</string>
    <string name="copy_user">Copy User</string>
    <string name="copy_password">Copy Password</string>
    
    <string name="general">General</string>
    <string name="fpm_file">FPM2 Data</string>
    
    <string name="pref_autolock">Auto-lock FPM</string>
    <string name="pref_autolock_summary">How long after entering passphrase should FPM database remain open.</string>
    <string name="pref_autolock_after">Lock After...</string>
    <string name="pref_copy_password_on_launch">Copy password</string>
    <string name="pref_copy_password_on_launch_summary">If selected, the password will be copied to clipboard when an item is launched.</string>
    <string name="pref_default_action_launch">Launch as default</string>
    <string name="pref_default_action_launch_summary">Launch, instead of view, when an item is selected.</string>
	<string name="pref_fpm_sd_location">Location of FPM2 Data</string>
	<string name="pref_fpm_sd_location_summary">Location on your phone to watch for the FPM file.</string>
	<string name="pref_internal_storage">Use Internal Storage</string>
	<string name="pref_internal_storage_summary">Recommended to prevents other applications from accessing data.</string>

    <string name="exception_file_not_found">FPM file not found.</string>
    <string name="exception_io">I/O Error reading file.</string>
    <string name="exception_sax">XML parsing error.</string>
    <string name="exception_jce">JCE Failure.</string>
    <string name="exception_fpm_unsupported">FPM Version unsupported.</string>
    <string name="exception_fpm_passphrase">Invalid passphrase.</string>

	<string name="exception_file_not_found_extra">Make sure that you\'ve copied ~/.fpm/fpm file from your PC to \"%1$s\".</string>
    <string name="exception_jce_extra">A required java cryptography extension (JCE) provider could not be found. Maybe unsupported version of android OS?</string>
    <string name="exception_fpm_unsupported_extra">Your FPM file uses a cipher not currently supported. Only AES-256 is supported.</string>
    
    <string name="category">Category:</string>
    <string name="all_category">&lt;&lt; ALL &gt;&gt;</string>
    <string name="default_category">&lt;&lt; DEFAULT &gt;&gt;</string>
    <string name="category_prompt">Category</string>
    
    <string name="fpm_updated">Imported updates from external storage.</string>
    
    <string name="search_hint">Search FPM2</string>
    
</resources>
